--- a/DemoApp/backend/Makefile
+++ b/DemoApp/backend/Makefile
@@ -2,6 +2,12 @@ PIP := venv/bin/pip
 PYTHON3 := venv/bin/python3
 TESTS_PATH := tests.py
 
+clear:
+	rm -rf venv
+
+venv:
+	python3 -m venv venv venv
+
 install_requirements:
 	${PIP} install -r requirements.txt
 
