--- a/DemoApp/frontend/package.json
+++ b/DemoApp/frontend/package.json
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0",
+    "fs": "0.0.1-security",
+    "os": "^0.1.2"
   }
 }
